After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742325 - ac3parse: requests minimum frame size that is too small
ac3parse: requests minimum frame size that is too small
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal major
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-04 15:17 UTC by Matej Knopp
Modified: 2015-01-08 13:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to request at least 8 bytes from baseparse (1.14 KB, patch)
2015-01-04 15:17 UTC, Matej Knopp
committed Details | Review

Description Matej Knopp 2015-01-04 15:17:10 UTC
Created attachment 293708 [details] [review]
Patch to request at least 8 bytes from baseparse

When parsing AC3 headers the parser reads 7-8 bytes (depending on channel count) but only requests minimum of 6 bytes from baseparse. On some packets this leads to reading beyond valid data, which at best results in incorrect reported channel count.
Comment 1 Sebastian Dröge (slomo) 2015-01-08 13:45:48 UTC
it also used 6 in another place. Change that.

commit ff5b235c32f91c08ba9ada6b5a6bfd118debbf54
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Sun Jan 4 15:57:10 2015 +0100

    ac3parse: request at least 8 bytes to properly parse header
    
    https://bugzilla.gnome.org/show_bug.cgi?id=742325