ac3parse: request at least 8 bytes to properly parse header

https://bugzilla.gnome.org/show_bug.cgi?id=742325